y.output
Terminals unused in grammar

   EQUAL
   END
   UMINUS


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: %empty
    3          | function functions

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    5 declarations: %empty
    6             | declaration SEMICOLON declarations
    7             | error SEMICOLON declarations
    8             | declaration error declarations
    9             | declaration SEMICOLON error

   10 declaration: ident COLON INTEGER
   11            | ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   12            | ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   13            | error COLON INTEGER
   14            | ident error INTEGER
   15            | ident COLON error

   16 ident: IDENT
   17      | IDENT COMMA ident

   18 statements: statement SEMICOLON
   19           | statement SEMICOLON statements
   20           | statement SEMICOLON error
   21           | error SEMICOLON statements
   22           | statement error statements

   23 statement: var ASSIGN expressions
   24          | IF bool_expression THEN statements ENDIF
   25          | IF bool_expression THEN statements ELSE statements ENDIF
   26          | WHILE bool_expression BEGINLOOP statements ENDLOOP
   27          | DO BEGINLOOP statements ENDLOOP WHILE bool_expression
   28          | FOR vars ASSIGN NUMBER SEMICOLON bool_expression SEMICOLON vars ASSIGN expressions BEGINLOOP statements ENDLOOP
   29          | READ vars
   30          | READ error
   31          | WRITE vars
   32          | WRITE error
   33          | CONTINUE
   34          | RETURN expressions

   35 bool_expression: relation_and_expression
   36                | relation_and_expression OR relation_and_expression

   37 relation_and_expression: relation_expression
   38                        | relation_expression AND relation_expression

   39 relation_expression: NOT expressions comp expressions
   40                    | NOT TRUE
   41                    | NOT FALSE
   42                    | NOT L_PAREN bool_expression R_PAREN
   43                    | expressions comp expressions
   44                    | TRUE
   45                    | FALSE
   46                    | L_PAREN bool_expression R_PAREN
   47                    | L_PAREN error R_PAREN
   48                    | NOT L_PAREN error R_PAREN

   49 comp: EQ
   50     | NEQ
   51     | LT
   52     | GT
   53     | GTE
   54     | LTE
   55     | error

   56 var: IDENT
   57    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   58    | error L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   59    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   60    | IDENT L_SQUARE_BRACKET error R_SQUARE_BRACKET
   61    | IDENT L_SQUARE_BRACKET error R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   62    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET error R_SQUARE_BRACKET

   63 vars: var
   64     | var COMMA vars
   65     | error COMMA vars
   66     | var COMMA error

   67 expression: multiplicative_expression
   68           | multiplicative_expression PLUS multiplicative_expression
   69           | multiplicative_expression MINUS multiplicative_expression
   70           | error PLUS multiplicative_expression
   71           | multiplicative_expression PLUS error
   72           | error PLUS error
   73           | multiplicative_expression MINUS error

   74 expressions: expression

   75 multiplicative_expression: term
   76                          | term MULT term
   77                          | term DIV term
   78                          | term PER term
   79                          | error MULT term
   80                          | term MULT error
   81                          | error DIV term
   82                          | term DIV error
   83                          | error PER term
   84                          | term PER error
   85                          | error MULT error
   86                          | error DIV error
   87                          | error PER error

   88 term: ident L_PAREN expressions R_PAREN
   89     | var
   90     | NUMBER
   91     | L_PAREN expressions R_PAREN
   92     | MINUS var
   93     | MINUS NUMBER
   94     | MINUS L_PAREN expressions R_PAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 13 14 15 20 21 22 30 32 47 48 55 58 60 61 62 65 66
    70 71 72 73 79 80 81 82 83 84 85 86 87
FUNCTION (258) 4
SEMICOLON (259) 4 6 7 9 18 19 20 21 28
COMMA (260) 17 64 65 66
COLON (261) 10 11 12 13 15
READ (262) 29 30
WRITE (263) 31 32
MULT (264) 76 79 80 85
DIV (265) 77 81 82 86
PLUS (266) 68 70 71 72
MINUS (267) 69 73 92 93 94
EQUAL (268)
PER (269) 78 83 84 87
END (270)
FOR (271) 28
CONTINUE (272) 33
L_SQUARE_BRACKET (273) 11 12 57 58 59 60 61 62
R_SQUARE_BRACKET (274) 11 12 57 58 59 60 61 62
L_PAREN (275) 42 46 47 48 88 91 94
R_PAREN (276) 42 46 47 48 88 91 94
BEGIN_PARAMS (277) 4
END_PARAMS (278) 4
BEGINLOOP (279) 26 27 28
ENDLOOP (280) 26 27 28
BEGIN_LOCALS (281) 4
END_LOCALS (282) 4
BEGIN_BODY (283) 4
END_BODY (284) 4
INTEGER (285) 10 11 12 13 14
ARRAY (286) 11 12
OF (287) 11 12
ENDIF (288) 24 25
ELSE (289) 25
IF (290) 24 25
THEN (291) 24 25
WHILE (292) 26 27
DO (293) 27
EQ (294) 49
NEQ (295) 50
LT (296) 51
GT (297) 52
GTE (298) 53
LTE (299) 54
AND (300) 38
OR (301) 36
NOT (302) 39 40 41 42 48
TRUE (303) 40 44
FALSE (304) 41 45
RETURN (305) 34
ASSIGN (306) 23 28
IDENT (307) 4 16 17 56 57 59 60 61 62
NUMBER (308) 11 12 28 90 93
UMINUS (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
functions (57)
    on left: 2 3, on right: 1 3
function (58)
    on left: 4, on right: 3
declarations (59)
    on left: 5 6 7 8 9, on right: 4 6 7 8
declaration (60)
    on left: 10 11 12 13 14 15, on right: 6 8 9
ident (61)
    on left: 16 17, on right: 10 11 12 14 15 17 88
statements (62)
    on left: 18 19 20 21 22, on right: 4 19 21 22 24 25 26 27 28
statement (63)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34, on right: 18 19 20
    22
bool_expression (64)
    on left: 35 36, on right: 24 25 26 27 28 42 46
relation_and_expression (65)
    on left: 37 38, on right: 35 36
relation_expression (66)
    on left: 39 40 41 42 43 44 45 46 47 48, on right: 37 38
comp (67)
    on left: 49 50 51 52 53 54 55, on right: 39 43
var (68)
    on left: 56 57 58 59 60 61 62, on right: 23 63 64 66 89 92
vars (69)
    on left: 63 64 65 66, on right: 28 29 31 64 65
expression (70)
    on left: 67 68 69 70 71 72 73, on right: 57 58 59 61 62 74
expressions (71)
    on left: 74, on right: 23 28 34 39 43 88 91 94
multiplicative_expression (72)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87, on right: 67 68
    69 70 71 73
term (73)
    on left: 88 89 90 91 92 93 94, on right: 75 76 77 78 79 80 81 82
    83 84


State 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    program    go to state 2
    functions  go to state 3
    function   go to state 4


State 1

    4 function: FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: functions .

    $default  reduce using rule 1 (program)


State 4

    3 functions: function . functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    functions  go to state 7
    function   go to state 4


State 5

    4 function: FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    SEMICOLON  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 functions: function functions .

    $default  reduce using rule 3 (functions)


State 8

    4 function: FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 9


State 9

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    error  shift, and go to state 10
    IDENT  shift, and go to state 11

    END_PARAMS  reduce using rule 5 (declarations)

    declarations  go to state 12
    declaration   go to state 13
    ident         go to state 14


State 10

    7 declarations: error . SEMICOLON declarations
   13 declaration: error . COLON INTEGER

    SEMICOLON  shift, and go to state 15
    COLON      shift, and go to state 16


State 11

   16 ident: IDENT .
   17      | IDENT . COMMA ident

    COMMA  shift, and go to state 17

    $default  reduce using rule 16 (ident)


State 12

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 18


State 13

    6 declarations: declaration . SEMICOLON declarations
    8             | declaration . error declarations
    9             | declaration . SEMICOLON error

    error      shift, and go to state 19
    SEMICOLON  shift, and go to state 20


State 14

   10 declaration: ident . COLON INTEGER
   11            | ident . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   12            | ident . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   14            | ident . error INTEGER
   15            | ident . COLON error

    error  shift, and go to state 21
    COLON  shift, and go to state 22


State 15

    7 declarations: error SEMICOLON . declarations

    error  shift, and go to state 10
    IDENT  shift, and go to state 11

    END_PARAMS  reduce using rule 5 (declarations)
    END_LOCALS  reduce using rule 5 (declarations)

    declarations  go to state 23
    declaration   go to state 13
    ident         go to state 14


State 16

   13 declaration: error COLON . INTEGER

    INTEGER  shift, and go to state 24


State 17

   17 ident: IDENT COMMA . ident

    IDENT  shift, and go to state 11

    ident  go to state 25


State 18

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 26


State 19

    8 declarations: declaration error . declarations

    error  shift, and go to state 10
    IDENT  shift, and go to state 11

    END_PARAMS  reduce using rule 5 (declarations)
    END_LOCALS  reduce using rule 5 (declarations)

    declarations  go to state 27
    declaration   go to state 13
    ident         go to state 14


State 20

    6 declarations: declaration SEMICOLON . declarations
    9             | declaration SEMICOLON . error

    error  shift, and go to state 28
    IDENT  shift, and go to state 11

    END_PARAMS  reduce using rule 5 (declarations)
    END_LOCALS  reduce using rule 5 (declarations)

    declarations  go to state 29
    declaration   go to state 13
    ident         go to state 14


State 21

   14 declaration: ident error . INTEGER

    INTEGER  shift, and go to state 30


State 22

   10 declaration: ident COLON . INTEGER
   11            | ident COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   12            | ident COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   15            | ident COLON . error

    error    shift, and go to state 31
    INTEGER  shift, and go to state 32
    ARRAY    shift, and go to state 33


State 23

    7 declarations: error SEMICOLON declarations .

    $default  reduce using rule 7 (declarations)


State 24

   13 declaration: error COLON INTEGER .

    $default  reduce using rule 13 (declaration)


State 25

   17 ident: IDENT COMMA ident .

    $default  reduce using rule 17 (ident)


State 26

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    error  shift, and go to state 10
    IDENT  shift, and go to state 11

    END_LOCALS  reduce using rule 5 (declarations)

    declarations  go to state 34
    declaration   go to state 13
    ident         go to state 14


State 27

    8 declarations: declaration error declarations .

    $default  reduce using rule 8 (declarations)


State 28

    7 declarations: error . SEMICOLON declarations
    9             | declaration SEMICOLON error .
   13 declaration: error . COLON INTEGER

    SEMICOLON  shift, and go to state 15
    COLON      shift, and go to state 16

    $default  reduce using rule 9 (declarations)


State 29

    6 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 6 (declarations)


State 30

   14 declaration: ident error INTEGER .

    $default  reduce using rule 14 (declaration)


State 31

   15 declaration: ident COLON error .

    $default  reduce using rule 15 (declaration)


State 32

   10 declaration: ident COLON INTEGER .

    $default  reduce using rule 10 (declaration)


State 33

   11 declaration: ident COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   12            | ident COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 35


State 34

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations . END_LOCALS BEGIN_BODY statements END_BODY

    END_LOCALS  shift, and go to state 36


State 35

   11 declaration: ident COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER
   12            | ident COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 37


State 36

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS . BEGIN_BODY statements END_BODY

    BEGIN_BODY  shift, and go to state 38


State 37

   11 declaration: ident COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER
   12            | ident COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 39


State 38

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY . statements END_BODY

    error     shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    IF        shift, and go to state 45
    WHILE     shift, and go to state 46
    DO        shift, and go to state 47
    RETURN    shift, and go to state 48
    IDENT     shift, and go to state 49

    statements  go to state 50
    statement   go to state 51
    var         go to state 52


State 39

   11 declaration: ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER
   12            | ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 53
    OF                shift, and go to state 54


State 40

   21 statements: error . SEMICOLON statements
   58 var: error . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    SEMICOLON         shift, and go to state 55
    L_SQUARE_BRACKET  shift, and go to state 56


State 41

   29 statement: READ . vars
   30          | READ . error

    error  shift, and go to state 57
    IDENT  shift, and go to state 49

    var   go to state 58
    vars  go to state 59


State 42

   31 statement: WRITE . vars
   32          | WRITE . error

    error  shift, and go to state 60
    IDENT  shift, and go to state 49

    var   go to state 58
    vars  go to state 61


State 43

   28 statement: FOR . vars ASSIGN NUMBER SEMICOLON bool_expression SEMICOLON vars ASSIGN expressions BEGINLOOP statements ENDLOOP

    error  shift, and go to state 62
    IDENT  shift, and go to state 49

    var   go to state 58
    vars  go to state 63


State 44

   33 statement: CONTINUE .

    $default  reduce using rule 33 (statement)


State 45

   24 statement: IF . bool_expression THEN statements ENDIF
   25          | IF . bool_expression THEN statements ELSE statements ENDIF

    error    shift, and go to state 64
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 66
    NOT      shift, and go to state 67
    TRUE     shift, and go to state 68
    FALSE    shift, and go to state 69
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    bool_expression            go to state 73
    relation_and_expression    go to state 74
    relation_expression        go to state 75
    var                        go to state 76
    expression                 go to state 77
    expressions                go to state 78
    multiplicative_expression  go to state 79
    term                       go to state 80


State 46

   26 statement: WHILE . bool_expression BEGINLOOP statements ENDLOOP

    error    shift, and go to state 64
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 66
    NOT      shift, and go to state 67
    TRUE     shift, and go to state 68
    FALSE    shift, and go to state 69
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    bool_expression            go to state 81
    relation_and_expression    go to state 74
    relation_expression        go to state 75
    var                        go to state 76
    expression                 go to state 77
    expressions                go to state 78
    multiplicative_expression  go to state 79
    term                       go to state 80


State 47

   27 statement: DO . BEGINLOOP statements ENDLOOP WHILE bool_expression

    BEGINLOOP  shift, and go to state 82


State 48

   34 statement: RETURN . expressions

    error    shift, and go to state 64
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 83
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    var                        go to state 76
    expression                 go to state 77
    expressions                go to state 84
    multiplicative_expression  go to state 79
    term                       go to state 80


State 49

   56 var: IDENT .
   57    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   59    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   60    | IDENT . L_SQUARE_BRACKET error R_SQUARE_BRACKET
   61    | IDENT . L_SQUARE_BRACKET error R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   62    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET error R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 85

    $default  reduce using rule 56 (var)


State 50

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements . END_BODY

    END_BODY  shift, and go to state 86


State 51

   18 statements: statement . SEMICOLON
   19           | statement . SEMICOLON statements
   20           | statement . SEMICOLON error
   22           | statement . error statements

    error      shift, and go to state 87
    SEMICOLON  shift, and go to state 88


State 52

   23 statement: var . ASSIGN expressions

    ASSIGN  shift, and go to state 89


State 53

   12 declaration: ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 90


State 54

   11 declaration: ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 91


State 55

   21 statements: error SEMICOLON . statements

    error     shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    IF        shift, and go to state 45
    WHILE     shift, and go to state 46
    DO        shift, and go to state 47
    RETURN    shift, and go to state 48
    IDENT     shift, and go to state 49

    statements  go to state 92
    statement   go to state 51
    var         go to state 52


State 56

   58 var: error L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    error    shift, and go to state 64
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 83
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    var                        go to state 76
    expression                 go to state 93
    multiplicative_expression  go to state 79
    term                       go to state 80


State 57

   30 statement: READ error .
   58 var: error . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   65 vars: error . COMMA vars

    COMMA             shift, and go to state 94
    L_SQUARE_BRACKET  shift, and go to state 56

    $default  reduce using rule 30 (statement)


State 58

   63 vars: var .
   64     | var . COMMA vars
   66     | var . COMMA error

    COMMA  shift, and go to state 95

    $default  reduce using rule 63 (vars)


State 59

   29 statement: READ vars .

    $default  reduce using rule 29 (statement)


State 60

   32 statement: WRITE error .
   58 var: error . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   65 vars: error . COMMA vars

    COMMA             shift, and go to state 94
    L_SQUARE_BRACKET  shift, and go to state 56

    $default  reduce using rule 32 (statement)


State 61

   31 statement: WRITE vars .

    $default  reduce using rule 31 (statement)


State 62

   58 var: error . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   65 vars: error . COMMA vars

    COMMA             shift, and go to state 94
    L_SQUARE_BRACKET  shift, and go to state 56


State 63

   28 statement: FOR vars . ASSIGN NUMBER SEMICOLON bool_expression SEMICOLON vars ASSIGN expressions BEGINLOOP statements ENDLOOP

    ASSIGN  shift, and go to state 96


State 64

   58 var: error . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   70 expression: error . PLUS multiplicative_expression
   72           | error . PLUS error
   79 multiplicative_expression: error . MULT term
   81                          | error . DIV term
   83                          | error . PER term
   85                          | error . MULT error
   86                          | error . DIV error
   87                          | error . PER error

    MULT              shift, and go to state 97
    DIV               shift, and go to state 98
    PLUS              shift, and go to state 99
    PER               shift, and go to state 100
    L_SQUARE_BRACKET  shift, and go to state 56


State 65

   92 term: MINUS . var
   93     | MINUS . NUMBER
   94     | MINUS . L_PAREN expressions R_PAREN

    error    shift, and go to state 101
    L_PAREN  shift, and go to state 102
    IDENT    shift, and go to state 49
    NUMBER   shift, and go to state 103

    var  go to state 104


State 66

   46 relation_expression: L_PAREN . bool_expression R_PAREN
   47                    | L_PAREN . error R_PAREN
   91 term: L_PAREN . expressions R_PAREN

    error    shift, and go to state 105
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 66
    NOT      shift, and go to state 67
    TRUE     shift, and go to state 68
    FALSE    shift, and go to state 69
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    bool_expression            go to state 106
    relation_and_expression    go to state 74
    relation_expression        go to state 75
    var                        go to state 76
    expression                 go to state 77
    expressions                go to state 107
    multiplicative_expression  go to state 79
    term                       go to state 80


State 67

   39 relation_expression: NOT . expressions comp expressions
   40                    | NOT . TRUE
   41                    | NOT . FALSE
   42                    | NOT . L_PAREN bool_expression R_PAREN
   48                    | NOT . L_PAREN error R_PAREN

    error    shift, and go to state 64
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 108
    TRUE     shift, and go to state 109
    FALSE    shift, and go to state 110
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    var                        go to state 76
    expression                 go to state 77
    expressions                go to state 111
    multiplicative_expression  go to state 79
    term                       go to state 80


State 68

   44 relation_expression: TRUE .

    $default  reduce using rule 44 (relation_expression)


State 69

   45 relation_expression: FALSE .

    $default  reduce using rule 45 (relation_expression)


State 70

   16 ident: IDENT .
   17      | IDENT . COMMA ident
   56 var: IDENT .
   57    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   59    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   60    | IDENT . L_SQUARE_BRACKET error R_SQUARE_BRACKET
   61    | IDENT . L_SQUARE_BRACKET error R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   62    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET error R_SQUARE_BRACKET

    COMMA             shift, and go to state 17
    L_SQUARE_BRACKET  shift, and go to state 85

    L_PAREN   reduce using rule 16 (ident)
    $default  reduce using rule 56 (var)


State 71

   90 term: NUMBER .

    $default  reduce using rule 90 (term)


State 72

   88 term: ident . L_PAREN expressions R_PAREN

    L_PAREN  shift, and go to state 112


State 73

   24 statement: IF bool_expression . THEN statements ENDIF
   25          | IF bool_expression . THEN statements ELSE statements ENDIF

    THEN  shift, and go to state 113


State 74

   35 bool_expression: relation_and_expression .
   36                | relation_and_expression . OR relation_and_expression

    OR  shift, and go to state 114

    $default  reduce using rule 35 (bool_expression)


State 75

   37 relation_and_expression: relation_expression .
   38                        | relation_expression . AND relation_expression

    AND  shift, and go to state 115

    $default  reduce using rule 37 (relation_and_expression)


State 76

   89 term: var .

    $default  reduce using rule 89 (term)


State 77

   74 expressions: expression .

    $default  reduce using rule 74 (expressions)


State 78

   43 relation_expression: expressions . comp expressions

    error  shift, and go to state 116
    EQ     shift, and go to state 117
    NEQ    shift, and go to state 118
    LT     shift, and go to state 119
    GT     shift, and go to state 120
    GTE    shift, and go to state 121
    LTE    shift, and go to state 122

    comp  go to state 123


State 79

   67 expression: multiplicative_expression .
   68           | multiplicative_expression . PLUS multiplicative_expression
   69           | multiplicative_expression . MINUS multiplicative_expression
   71           | multiplicative_expression . PLUS error
   73           | multiplicative_expression . MINUS error

    PLUS   shift, and go to state 124
    MINUS  shift, and go to state 125

    $default  reduce using rule 67 (expression)


State 80

   75 multiplicative_expression: term .
   76                          | term . MULT term
   77                          | term . DIV term
   78                          | term . PER term
   80                          | term . MULT error
   82                          | term . DIV error
   84                          | term . PER error

    MULT  shift, and go to state 126
    DIV   shift, and go to state 127
    PER   shift, and go to state 128

    $default  reduce using rule 75 (multiplicative_expression)


State 81

   26 statement: WHILE bool_expression . BEGINLOOP statements ENDLOOP

    BEGINLOOP  shift, and go to state 129


State 82

   27 statement: DO BEGINLOOP . statements ENDLOOP WHILE bool_expression

    error     shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    IF        shift, and go to state 45
    WHILE     shift, and go to state 46
    DO        shift, and go to state 47
    RETURN    shift, and go to state 48
    IDENT     shift, and go to state 49

    statements  go to state 130
    statement   go to state 51
    var         go to state 52


State 83

   91 term: L_PAREN . expressions R_PAREN

    error    shift, and go to state 64
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 83
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    var                        go to state 76
    expression                 go to state 77
    expressions                go to state 131
    multiplicative_expression  go to state 79
    term                       go to state 80


State 84

   34 statement: RETURN expressions .

    $default  reduce using rule 34 (statement)


State 85

   57 var: IDENT L_SQUARE_BRACKET . expression R_SQUARE_BRACKET
   59    | IDENT L_SQUARE_BRACKET . expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   60    | IDENT L_SQUARE_BRACKET . error R_SQUARE_BRACKET
   61    | IDENT L_SQUARE_BRACKET . error R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   62    | IDENT L_SQUARE_BRACKET . expression R_SQUARE_BRACKET L_SQUARE_BRACKET error R_SQUARE_BRACKET

    error    shift, and go to state 132
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 83
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    var                        go to state 76
    expression                 go to state 133
    multiplicative_expression  go to state 79
    term                       go to state 80


State 86

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY .

    $default  reduce using rule 4 (function)


State 87

   22 statements: statement error . statements

    error     shift, and go to state 40
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    IF        shift, and go to state 45
    WHILE     shift, and go to state 46
    DO        shift, and go to state 47
    RETURN    shift, and go to state 48
    IDENT     shift, and go to state 49

    statements  go to state 134
    statement   go to state 51
    var         go to state 52


State 88

   18 statements: statement SEMICOLON .
   19           | statement SEMICOLON . statements
   20           | statement SEMICOLON . error

    error     shift, and go to state 135
    READ      shift, and go to state 41
    WRITE     shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    IF        shift, and go to state 45
    WHILE     shift, and go to state 46
    DO        shift, and go to state 47
    RETURN    shift, and go to state 48
    IDENT     shift, and go to state 49

    ENDLOOP   reduce using rule 18 (statements)
    END_BODY  reduce using rule 18 (statements)
    ENDIF     reduce using rule 18 (statements)
    ELSE      reduce using rule 18 (statements)

    statements  go to state 136
    statement   go to state 51
    var         go to state 52


State 89

   23 statement: var ASSIGN . expressions

    error    shift, and go to state 64
    MINUS    shift, and go to state 65
    L_PAREN  shift, and go to state 83
    IDENT    shift, and go to state 70
    NUMBER   shift, and go to state 71

    ident                      go to state 72
    var                        go to state 76
    expression                 go to state 77
    expressions                go to state 137
    multiplicative_expression  go to state 79
    term                       go to state 80


State 90

   12 declaration: ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 138


State 91

   11 declaration: ident COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 11 (declaration)


State 92

   21 statements: error SEMICOLON statements .

    $default  reduce using rule 21 (statements)


State 93

   58 var: error L_SQUARE_BRACKET expression . R_SQUARE_BRACKET

    R_SQUARE_BRACKET  shift, and go to state 139


State 94

   65 vars: error COMMA . vars

    error  shift, and go to state 62
    IDENT  shift, and go to state 49

    var   go to state 58
    vars  go to state 140


State 95

   64 vars: var COMMA . vars
   66     | var COMMA . error

    error  shift, and go to state 141
    IDENT  shift, and go to state 49

    var   go to state 58
    vars  go to state 142


State 96

   28 statement: FOR vars ASSIGN . NUMBER SEMICOLON bool_expression SEMICOLON vars ASSIGN expressions BEGINLOOP statements ENDLOOP

    NUMBER  shift, and go to state 143


State 97

   79 multiplicative_expression: error MULT . term
   85                          | error MULT . error
